# Multimodal_system_comprehension_AI

./: .gitignore  ADMIN_CONSOLE_GUIDE.md  ARCHITECTURE.md  DEMO_GUIDE.md  HISTORY.md  LANGUAGE_PACK_GENERATOR.md  LINGUISTIC_RESOURCES.md  QUICK_START.md  QUICK_START_DEMO.md  README.md  STATUS.md  demo_authentication.py  generate_language_pack.py  generate_massive_pack.bat  generate_massive_pack.ps1  language_pack_generator_gui.py  language_pack_viewer.py  quick_demo.sh  requirements.txt  run_admin_console.bat  run_generator.bat  run_language_viewer.bat  test_core.py  test_translation.py  test_wordnet.py  update_shortcuts.bat
compression/: README.md  demo_compression.py  semantic_compression_dict.py  token_cost_analyzer.py
core/: __init__.py  concepts.py  grammar.py  language_pack.py  word_generator.py  wordnet_concepts.py
cpp/: CMakeLists.txt  README.md
cpp/include/: gremlin_engine.hpp  gremlin_tokenizer.hpp  semantic_dictionary.hpp  trap_door.hpp
data/: base_concepts.json  grammar_rules.json
demo/: admin_console.py  admin_console_tk.py  client.py  engine.py  mitm_viewer.py  server.py
shortcuts/: Admin_Console.bat  Language_Generator.bat  Language_Viewer.bat  README.md
training/: README.md  benchmark_speed.py  convert_corpus.py  corpus_generator.py  corpus_viewer.py  download_gemma_safetensors.py  evaluate_model.py  gemma_model.py  gremlin_tokenizer_wrapper.py  lora.py  resize_embeddings.py  train_model.py  train_tokenizer.py
translation/: __init__.py  gemma_translator.py  vector_store.py
